--- a/aprende_java/android/app/src/main/res/values/color.xml
+++ b/aprende_java/android/app/src/main/res/values/color.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-        <color name="primary">#0B5DAE </color>
+        <color name="primary">#5f017e </color>
 </resources>
